--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
   </head>
   
   <body>
-    <h1>The Propaganda of the Oil Compenies Againts Climate Change </h1>
+    <h1>Shir Koren</h1>
     <img src="https://avatars.githubusercontent.com/u/102361148?v=4">
-Hello there, awesome person!
+    <ul>
+      <li>Kurzgesagt – In a Nutshell</li>
+      <li>Canva</li>
+      <li>YouTube</li>
+      <li>Netflix</li>
+    </ul>
+
   </body>
 </html>
