--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <h1>Shir Koren</h1>
     <img src="https://avatars.githubusercontent.com/u/102361148?v=4">
     <ul>
-      <li>Kurzgesagt – In a Nutshell</li>
-      <li>Canva</li>
-      <li>YouTube</li>
-      <li>Netflix</li>
+      <li>One My favorite site is <a href="https://github.com">GitHub</a>!</li>
+      <li>One My favorite site is <a href="https://kurzgesagt.org/">Kurzgesagt – In a Nutshell</a></li>
+      <li>One My favorite site is <a href="https://www.canva.com/">Canva</a></li>
+      <li>One My favorite site is <a href="https://www.itamar-y.art/">my own Website!</a></li>
     </ul>
 
   </body>
